[gd_scene load_steps=27 format=2]

[ext_resource path="res://Characters/Characters.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/EvilFish.gd" type="Script" id=2]
[ext_resource path="res://Weapons/EnemyBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Weapons/Shrimpclip.tscn" type="PackedScene" id=4]
[ext_resource path="res://Characters/Spritesheet.png" type="Texture" id=5]
[ext_resource path="res://Animations/Carp/back_idle_carp.tres" type="Animation" id=6]
[ext_resource path="res://Animations/Carp/back_left_idle_carp.tres" type="Animation" id=7]
[ext_resource path="res://Animations/Carp/back_left_walk_carp.tres" type="Animation" id=8]
[ext_resource path="res://Animations/Carp/back_right_idle_carp.tres" type="Animation" id=9]
[ext_resource path="res://Animations/Carp/back_right_walk_carp.tres" type="Animation" id=10]
[ext_resource path="res://Animations/Carp/back_walk_carp.tres" type="Animation" id=11]
[ext_resource path="res://Animations/evil_fish_test.tres" type="Animation" id=12]
[ext_resource path="res://Animations/Carp/front_idle_carp.tres" type="Animation" id=13]
[ext_resource path="res://Animations/Carp/front_left_idle_carp.tres" type="Animation" id=14]
[ext_resource path="res://Animations/Carp/front_left_walk_carp.tres" type="Animation" id=15]
[ext_resource path="res://Animations/Carp/front_right_idle_carp.tres" type="Animation" id=16]
[ext_resource path="res://Animations/Carp/front_right_walk_carp.tres" type="Animation" id=17]
[ext_resource path="res://Animations/Carp/front_walk_carp.tres" type="Animation" id=18]
[ext_resource path="res://Audio/roblox_death.wav" type="AudioStream" id=19]
[ext_resource path="res://Weapons/auto_swap.tres" type="Animation" id=20]
[ext_resource path="res://Weapons/shotti_swap.tres" type="Animation" id=21]
[ext_resource path="res://Audio/BLAM.wav" type="AudioStream" id=22]

[sub_resource type="Animation" id=4]

resource_name = "auto_reload"
length = 1.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 52, 422, 12, 9 ), Rect2( 52, 431, 12, 8 ), Rect2( 52, 422, 11, 9 ) ]
}

[sub_resource type="Animation" id=1]

resource_name = "pistol_swap"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 8, 415, 10, 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:gun")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "pistol" ]
}

[sub_resource type="Animation" id=3]

resource_name = "shotti_reload"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 52, 391, 15, 8 ), Rect2( 52, 399, 15, 8 ), Rect2( 52, 407, 15, 8 ), Rect2( 52, 399, 15, 8 ), Rect2( 52, 391, 15, 8 ) ]
}

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10.9342, 17.9968 )

[node name="EvilFish" instance=ExtResource( 1 )]

material = null
z_as_relative = false
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Material", "Pause", "Pickable", "Transform", "Visibility", "Z Index" ]
Bullet = ExtResource( 3 )
clip = ExtResource( 4 )
speed = 100
weapon_cooldown = 1.0
max_health = 2
starting_health = 2
weapon_offset = 13
clip_size = 5
reload_timer = 1
weapon_shift = 2
clips = true
clip_timer = 1.0
clip_anim = "9mil_drop"
shells = true
shell_anim = "shell_fly"
gun_swap = "pistol_swap"
gun = "shotti"
current_room = "a"
front_idle = "front_idle_carp"
front_right_idle = "front_right_idle_carp"
front_left_idle = "front_left_idle_carp"
back_idle = "back_idle_carp"
back_left_idle = "back_left_idle_carp"
back_right_idle = "back_right_idle_carp"
front_walk = "front_walk_carp"
front_right_walk = "front_right_walk_carp"
front_left_walk = "front_left_walk_carp"
back_walk = "back_walk_carp"
back_left_walk = "back_left_walk_carp"
back_right_walk = "back_right_walk_carp"
front_dash = "evil_fish_test"
front_right_dash = "evil_fish_test"
front_left_dash = "evil_fish_test"
back_dash = "evil_fish_test"
back_left_dash = "evil_fish_test"
back_right_dash = "evil_fish_test"
front_blood = "evil_fish_test"
front_right_blood = "evil_fish_test"
front_left_blood = "evil_fish_test"
back_blood = "evil_fish_test"
back_left_blood = "evil_fish_test"
back_right_blood = "evil_fish_test"
reload_right = "a"
reload_left = "a"
detect_radius = 0

[node name="Body" parent="." index="0"]

modulate = Color( 1, 1, 1, 1 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 505, 158, 22, 38 )
_sections_unfolded = [ "Material", "Offset", "Region", "Transform", "Visibility" ]

[node name="AnimationPlayer" parent="Body" index="0"]

anims/back_idle_carp = ExtResource( 6 )
anims/back_left_idle_carp = ExtResource( 7 )
anims/back_left_walk_carp = ExtResource( 8 )
anims/back_right_idle_carp = ExtResource( 9 )
anims/back_right_walk_carp = ExtResource( 10 )
anims/back_walk_carp = ExtResource( 11 )
anims/evil_fish_test = ExtResource( 12 )
anims/front_idle_carp = ExtResource( 13 )
anims/front_left_idle_carp = ExtResource( 14 )
anims/front_left_walk_carp = ExtResource( 15 )
anims/front_right_idle_carp = ExtResource( 16 )
anims/front_right_walk_carp = ExtResource( 17 )
anims/front_walk_carp = ExtResource( 18 )

[node name="AudioStreamPlayer2D" parent="Body" index="2"]

stream = ExtResource( 19 )

[node name="Weapon" parent="." index="1"]

position = Vector2( -13, 0 )
rotation = 3.14159
texture = ExtResource( 5 )
centered = false
offset = Vector2( -2, -3 )
flip_v = true
region_enabled = true
region_rect = Rect2( 52, 422, 12, 9 )
_sections_unfolded = [ "Material", "Offset", "Region", "Transform" ]

[node name="Muzzle" parent="Weapon" index="0"]

position = Vector2( 10.9368, 1.76607 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" parent="Weapon" index="1"]

anims/auto_reload = SubResource( 4 )
anims/auto_swap = ExtResource( 20 )
anims/pistol_swap = SubResource( 1 )
anims/shotti_reload = SubResource( 3 )
anims/shotti_swap = ExtResource( 21 )

[node name="AudioStreamPlayer2D" parent="Weapon" index="2"]

stream = ExtResource( 22 )

[node name="CollisionShape2D" parent="." index="3"]

position = Vector2( 0.0510483, -0.765703 )
shape = SubResource( 2 )

[node name="DetectRadius" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]

disabled = true
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="DetectRadius" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="DetectRadius" to="." method="_on_Area2D_body_exited"]


